--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         javaxServeletApiVersion = '3.1.0'
         slf4jVersion = '1.7.21'
         log4jVersion = '2.5'
+        commonsCodecVersion = '1.10'
     }
 
     dependencies {
@@ -33,5 +34,7 @@ allprojects {
         compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "$log4jVersion"
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "$log4jVersion"
         compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: "$log4jVersion"
+
+        compile group: 'commons-codec', name: 'commons-codec', version: "$commonsCodecVersion"
     }
 }
