Model Updated (for conference adding must be a deadlinegit status! [comment added in COnference Service])

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         slf4jVersion = '1.7.21'
         log4jVersion = '2.5'
         commonsCodecVersion = '1.10'
+        lombokVersion = '1.16.12'
     }
 
     dependencies {
@@ -34,7 +35,7 @@ allprojects {
         compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "$log4jVersion"
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "$log4jVersion"
         compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: "$log4jVersion"
-
+        compile group: 'org.projectlombok', name: 'lombok', version: "$lombokVersion"
         compile group: 'commons-codec', name: 'commons-codec', version: "$commonsCodecVersion"
     }
 }
