--- a/WebConference-web/src/main/resources/local/db.properties
+++ b/WebConference-web/src/main/resources/local/db.properties
@@ -1,5 +1,5 @@
 db.serverName=localhost
 db.databaseName=WebConferenceDB
 db.user=postgres
-db.password=teslaCoil
-db.generateDDL=true 
+db.password=oltie
+db.generateDDL=true
